[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juego/Interfaz/ContenedorVida.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Interfaz/ContenedorLlaves.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Interfaz/ContenedorMonedaPlata.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/Interfaz/ContenedorMonedaOro.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Interfaz/ContenedorMonedaBronce.tscn" type="PackedScene" id=5]
[ext_resource path="res://Juego/Interfaz/HUD.gd" type="Script" id=6]
[ext_resource path="res://Recursos/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0.133333, 1, 0.533333, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_color = Color( 0.133333, 1, 0.533333, 1 )
font_data = ExtResource( 8 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.76596
margin_top = -0.8909
margin_right = 4.76599
margin_bottom = -0.890869
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 153.408, 5.85567, 70.8713 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 1145.13 ]
}

[node name="ContenedorVida" parent="." instance=ExtResource( 1 )]
margin_left = 26.0
margin_top = 15.0
margin_right = 168.0
margin_bottom = 71.0

[node name="ContenedorLlaves" parent="." instance=ExtResource( 2 )]
margin_left = 180.0
margin_top = 15.0
margin_right = 322.0
margin_bottom = 71.0

[node name="ContenedorMonedaOro" parent="." instance=ExtResource( 4 )]
margin_left = 1174.59
margin_top = 67.7458
margin_right = 1281.59
margin_bottom = 92.7458

[node name="ContenedorMonedaPlata" parent="." instance=ExtResource( 3 )]
margin_left = 1173.81
margin_top = 37.1352
margin_right = 1280.81
margin_bottom = 59.1352

[node name="ContenedorMonedaBronce" parent="." instance=ExtResource( 5 )]
margin_left = 1174.0
margin_right = 1280.0
margin_bottom = 29.0

[node name="PanelPuntaje" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0 )
margin_left = 827.266
margin_top = 49.5017
margin_right = 1112.26
margin_bottom = 107.502
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PanelPuntaje"]
self_modulate = Color( 0.0823529, 0.772549, 0.862745, 0 )
margin_left = 49.0
margin_right = 335.0
margin_bottom = 69.0
color = Color( 0.113725, 0.137255, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Puntaje" type="Label" parent="PanelPuntaje"]
modulate = Color( 0.282353, 0.980392, 0, 1 )
self_modulate = Color( 0.0862745, 0.0784314, 0.0784314, 1 )
margin_left = 18.9437
margin_top = 10.0361
margin_right = 374.944
margin_bottom = 63.0361
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelLevel" type="Panel" parent="."]
self_modulate = Color( 0.854902, 0.176471, 0.176471, 0 )
margin_left = 830.145
margin_top = 4.04653
margin_right = 1200.15
margin_bottom = 62.0465
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PanelLevel"]
self_modulate = Color( 0.690196, 0.298039, 0.298039, 0 )
margin_right = 401.0
margin_bottom = 69.0
color = Color( 0.113725, 0.137255, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="PanelLevel"]
modulate = Color( 0.282353, 0.980392, 0, 1 )
self_modulate = Color( 0.0823529, 0.372549, 0.913725, 1 )
margin_left = 18.9437
margin_top = 10.0361
margin_right = 374.944
margin_bottom = 63.0361
custom_fonts/font = SubResource( 2 )
text = "Level"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
